# protolith

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: audit_weekly.yml
proc-macro-definitions/: Cargo.toml
proc-macro-definitions/src/: lib.rs
proc-macro-definitions/tests/: meta_badges.rs  meta_version_numbers.rs
src/: lib.rs
tests/: empty_derive.rs
