[package]
name = "TODO_CRATE_NAME_proc-macro-definitions"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "TODO_DESCRIPTION"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/TODO_CRATE_NAME"
homepage = "https://github.com/Tamschi/TODO_CRATE_NAME/tree/v0.0.1"
documentation = "https://docs.rs/TODO_CRATE_NAME/0.0.1"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
]
resolver = "2"
publish = false

[lib]
proc-macro = true

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
