[package]
name = "protolith_proc-macro-definitions"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Procedural macro definitions for `protolith`."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/protolith"
homepage = "https://github.com/Tamschi/protolith/tree/v0.0.1"
documentation = "https://docs.rs/protolith/0.0.1"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
]
resolver = "2"
publish = false

[lib]
proc-macro = true

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
